--- a/ui/narrative/methods/run_bridgetallencontigfilterappdemo_max/display.yaml
+++ b/ui/narrative/methods/run_bridgetallencontigfilterappdemo_max/display.yaml
@@ -1,18 +1,12 @@
-#
-# define display information
-#
-name: Method Name Here
+name: Filter Contigs by Length
 
 tooltip: |
-    Perform some kind of method
+    Filter contigs in an assembly using minimum and maximum length thresholds.
 
 screenshots: []
 
 icon: icon.png
 
-#
-# define a set of similar apps that might be useful to the user
-#
 suggestions:
     apps:
         related:
@@ -20,28 +14,13 @@ suggestions:
         next:
             [app3, app4]
 
-#
-# Configure the display and description of parameters
-#
 parameters:
-    assembly_ref:
+    parameter_1:
         ui-name: |
             Assembly
         short-hint: |
             The assembly to filter (will be overwritten)
-    min_length:
-        ui-name: |
-            Min Length Threshold
-        short-hint: |
-            All contigs below this length will be removed
-    max_length:
-        ui-name: |
-            Maximum Contig Length
-        short-hint: |
-            All contigs above this length will be removed
 
-
-            The first parameter that needs to be entered to drive the method. This might be the first of many.
 
 description : |
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar efficitur felis, quis tincidunt sem congue at. Vivamus ornare feugiat faucibus. Fusce tincidunt mattis nunc, nec varius purus convallis quis. Nulla facilisi. In at magna dolor. Suspendisse sit amet felis at arcu auctor dapibus vitae pharetra dui. Nam semper mi quis tortor fermentum mollis. Donec a arcu pharetra, rutrum dolor vitae, rutrum mauris. Donec ornare fringilla sagittis. Nam laoreet est in elementum malesuada. Vestibulum id mi eget urna hendrerit feugiat. Donec et ultrices nulla. Phasellus diam eros, dapibus at tempus nec, semper vel ante.</p>
